input overflow fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,9 @@ body {
 }
 .app-container {
     position: relative;
-    min-height: 100vh;
+    min-height: 100dvh;
+    /* max-height: 100dvh;  TODO:  Restrict this to 
+    100dvh so user doesn't have to scroll    */  
     background-color: #f9fafb; /* bg-gray-50 */
     display: flex;
     flex-direction: column;
@@ -223,9 +225,11 @@ body {
 }
 .game-id-input-container {
     width: 100%;
-    max-width: 24rem;
+    max-width: 90%;
     margin-bottom: 1.5rem;
-    position: relative;
+    position: relative; 
+    display:flex;
+    align-items: center;
 }
 .game-id-input {
     width: 100%;
@@ -235,7 +239,7 @@ body {
     border: 2px solid #60a5fa;
     border-radius: 9999px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    outline: none;
+    outline: transparent;
 }
 .game-id-input:focus {
     box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
